Use WebClient to handle more concurrent requests